--- a/client/src/components/PostSide/PostSide.css
+++ b/client/src/components/PostSide/PostSide.css
@@ -3,6 +3,6 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    height: 100vh;
-    overflow: auto;;
+    height: 95.5vh;
+    overflow: auto;
 }
