--- a/client/src/App.css
+++ b/client/src/App.css
@@ -91,3 +91,10 @@
   height: 2rem;
   align-self: flex-end;
 }
+
+
+@media screen and (max-width: 768px) {
+  .App{
+    overflow-y: hidden;
+  }
+}
