--- a/client/src/components/ChatBox/ChatBox.css
+++ b/client/src/components/ChatBox/ChatBox.css
@@ -139,5 +139,10 @@
       font-size: 12px;
       padding: 5px 8px;
     }
+
+    .chatbox-empty-message{
+        font-family: 'Times New Roman', Times, serif;
+        font-size: x-small;
+    }
   }
   
