--- a/client/src/pages/Auth/Auth.css
+++ b/client/src/pages/Auth/Auth.css
@@ -52,7 +52,20 @@ body, html {
 .Webname>h6{
     font-size: 0.85rem;
 }
+.infoInput1{
+  border: none;
+  outline: none;
+  background-color: var(--inputColor);
+  border-radius: 8px;
+  padding: 20px;
+  flex:1;
+}
 
+.infoButton1{
+  width: 6rem;
+  height: 2rem;
+  align-self: flex-end;
+}
 
 
 /* right side */
@@ -81,8 +94,39 @@ body, html {
     align-items: left;
     justify-content:left;
 }
-.infoInput{
+.infoInput1{
   width: 73%;
 }
+
+.infoForm{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.infoInput1{
+  border: none;
+  outline: none;
+  background-color: var(--inputColor);
+  border-radius: 8px;
+  padding: 20px;
+  flex:1;
+}
+
+.infoForm>div{
+  display: flex;
+  gap: 1rem;
+  height: 2rem;
+  width: 90%;
+}
+
+.infoButton1{
+  width: 6rem;
+  height: 2rem;
+  align-self: flex-end;
+}
+
 }
 
